--- a/custom.css
+++ b/custom.css
@@ -1,3 +1,7 @@
+.reveal, .reveal h1, .reveal h2, .reveal h3 {
+  font-family: "Fira Sans", sans-serif;
+}
+
 /* global linksbündig */
 .reveal .slides {
   text-align: left;
